k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ingress-nginx 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 702551696126.dkr.ecr.eu-central-1.amazonaws.com/craftscene-php:latest
        ports:
        - containerPort: 9000  
---
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-nginx 
  name: php-app-service
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9000
