k8s/nginx_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: craftscene-nginx-deployment
  namespace: craftscene-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: craftscene-nginx
  template:
    metadata:
      labels:
        app: craftscene-nginx
    spec:
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
      containers:
        - name: nginx
          image: 361749389927.dkr.ecr.me-south-1.amazonaws.com/craftscene-nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: craftscene-nginx-service
  namespace: craftscene-app
spec:
  selector:
    app: craftscene
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
