k8s/php_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: craftscene-php-deployment
  namespace: craftscene-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: craftscene-php
  template:
    metadata:
      labels:
        app: craftscene-php
    spec:
      containers:
        - name: php-fpm
          image: mseel3ttar/craftscene-php:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: craftscene-php-service
  namespace: craftscene-app
spec:
  selector:
    app: craftscene
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
